--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,12 +2,12 @@
 ---
 
 @import "{{ site.theme }}";
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Overpass&display=swap');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Raleway&display=swap');
 h1 {
-    font-family: Overpass, Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 p {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 300;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: light;
 }
