--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Raleway&display=swap');
 h1 {
     font-family: 'Raleway', Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-weight: 600;
 }
 p {
     font-family: 'IBM Plex Sans', sans-serif;
